filesystem: new test, check when another filesystem already exists

--- a/test/integration/targets/filesystem/tasks/create_fs.yml
+++ b/test/integration/targets/filesystem/tasks/create_fs.yml
@@ -79,6 +79,9 @@
         that:
           - 'not (fs5_result|changed)'
           - 'fs5_result|success'
+
+  - import_tasks: overwrite_another_fs.yml
+
   always:
     - file:
         name: '{{ dev }}'
