--- a/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
+++ b/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
@@ -16,6 +16,7 @@
       resource_group: "{{ resource_group }}"
       name: testnic001
       virtual_network: testnic001
+      vertual_network_resource_group: "{{ resource_group_secondary }}"
       subnet: testnic001
       public_ip_name: testnic001
       public_ip_allocation_method: Static
@@ -32,6 +33,7 @@
       name: testnic001
       security_group: testnic001
       virtual_network: testnic001
+      vertual_network_resource_group: "{{ resource_group_secondary }}"
       subnet: testnic001
       ip_configurations:
         - name: ipconfig-add
@@ -54,6 +56,7 @@
       name: testnic001
       security_group: testnic001
       virtual_network: testnic001
+      vertual_network_resource_group: "{{ resource_group_secondary }}"
       subnet: testnic001
       ip_configurations:
         - name: ipconfig-add
