--- a/test/integration/ios.yaml
+++ b/test/integration/ios.yaml
@@ -130,6 +130,16 @@
 #            failed_modules: "{{ failed_modules }} + [ 'ios_vlan' ]"
 #            test_failed: true
 
+#    - block:
+#      - include_role:
+#          name: ios_linkagg
+#        when: "limit_to in ['*', 'ios_linkagg']"
+#      rescue:
+#        - set_fact:
+#            failed_modules: "{{ failed_modules }} + [ 'ios_linkagg' ]"
+#            test_failed: true
+
+
 ###########
     - debug: var=failed_modules
       when: test_failed
