renamed container instance, removed required: false

--- a/test/integration/targets/azure_rm_containerinstance/tasks/main.yml
+++ b/test/integration/targets/azure_rm_containerinstance/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: Create sample container group
-  azure_rm_aci:
+- name: Create sample container instance
+  azure_rm_containerinstance:
     resource_group: "{{ resource_group }}"
     name: "aci{{ resource_group | hash('md5') | truncate(7, True, '') }}"
     os_type: linux
@@ -18,14 +18,14 @@
         memory: 1.5
   register: output
 
-- name: Assert the ACI instance is well created
+- name: Assert the container instance is well created
   assert:
     that:
       - output.changed
       - output.state.provisioning_state == 'Creating'
 
-- name: Remove ACI instance
-  azure_rm_aci:
+- name: Remove container instance instance
+  azure_rm_containerinstance:
     resource_group: "{{ resource_group }}"
     name: "aci{{ resource_group | hash('md5') | truncate(7, True, '') }}"
     os_type: linux
