--- a/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
+++ b/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
@@ -3,6 +3,7 @@
       resource_group: "{{ resource_group_secondary }}"
       name: testnic001
       address_prefixes: "10.10.0.0/16"
+  register: vn
 
 - name: Add subnet
   azure_rm_subnet:
@@ -11,12 +12,27 @@
       address_prefix: "10.10.0.0/24"
       virtual_network: testnic001
 
+- name: Create NIC (check mode)
+  azure_rm_networkinterface:
+      resource_group: "{{ resource_group }}"
+      name: testnic001
+      virtual_network: "{{ vn.state.id }}"
+      subnet: testnic001
+      public_ip_name: testnic001
+      public_ip_allocation_method: Static
+      security_group: testnic001
+  register: output
+  check_mode: yes
+
+- assert:
+    that:
+      - output.changed
+
 - name: Create NIC
   azure_rm_networkinterface:
       resource_group: "{{ resource_group }}"
       name: testnic001
-      virtual_network: testnic001
-      virtual_network_resource_group: "{{ resource_group_secondary }}"
+      virtual_network: "{{ vn.state.id }}"
       subnet: testnic001
       public_ip_name: testnic001
       public_ip_allocation_method: Static
@@ -25,15 +41,37 @@
 
 - assert:
     that:
+      - output.changed
       - output.state.ip_configuration.subnet.name == 'testnic001'
+
+- name: Update the NIC with mutilple ip configurations (check mode)
+  azure_rm_networkinterface:
+      resource_group: "{{ resource_group }}"
+      name: testnic001
+      security_group: testnic001
+      virtual_network: "{{ vn.state.id }}"
+      subnet: testnic001
+      ip_configurations:
+        - name: ipconfig-add
+          public_ip_name: testnic002
+        - name: default
+          public_ip_name: testnic001
+          primary: True
+          public_ip_allocation_method: Static
+        - name: ipconfig1
+  register: output
+  check_mode: yes
+
+- assert:
+    that:
+      - output.changed
 
 - name: Update the NIC with mutilple ip configurations
   azure_rm_networkinterface:
       resource_group: "{{ resource_group }}"
       name: testnic001
       security_group: testnic001
-      virtual_network: testnic001
-      virtual_network_resource_group: "{{ resource_group_secondary }}"
+      virtual_network: "{{ vn.state.id }}"
       subnet: testnic001
       ip_configurations:
         - name: ipconfig-add
@@ -47,6 +85,7 @@
 
 - assert:
     that:
+      - output.changed
       - not output.state.ip_configuration
       - output.state.ip_configurations | length == 3
 
@@ -55,8 +94,7 @@
       resource_group: "{{ resource_group }}"
       name: testnic001
       security_group: testnic001
-      virtual_network: testnic001
-      virtual_network_resource_group: "{{ resource_group_secondary }}"
+      virtual_network: "{{ vn.state.id }}"
       subnet: testnic001
       ip_configurations:
         - name: ipconfig-add
