--- a/test/integration/nxos.yaml
+++ b/test/integration/nxos.yaml
@@ -563,6 +563,15 @@
             failed_modules: "{{ failed_modules }} + [ 'nxos_l3_interface' ]"
             test_failed: true
 
+    - block:
+      - include_role:
+          name: nxos_linkagg
+        when: "limit_to in ['*', 'nxos_linkagg']"
+      rescue:
+        - set_fact:
+            failed_modules: "{{ failed_modules }} + [ 'nxos_linkagg' ]"
+            test_failed: true
+
 ###########
     - debug: var=failed_modules
       when: test_failed
