Reorganize test structure
Do all import and include tests in a single target.

--- a/test/integration/targets/include_import/role/test_include_role.yml
+++ b/test/integration/targets/include_import/role/test_include_role.yml
@@ -1,26 +1,29 @@
-- hosts: localhost
+- name: Test include_role
+  hosts: localhost
   connection: local
   become: no
-  gather_facts: no
 
   vars:
     role_name: role1
     role_vars:
       where_am_i_defined: in the playbook
+    entire_task:
+      include_role:
+        # name: role1
 
   tasks:
     - name: Test basic role include
       include_role:
         name: role1
 
-    # FIXME Currently failing
-    # - name: Test role include with a loop
-    #   include_role:
-    #     name: "{{ item }}"
-    #   ignore_errors: yes
-    #   with_items:
-    #     - role1
-    #     - role2
+    FIXME Currently failing
+    - name: Test role include with a loop
+      include_role:
+        name: "{{ item }}"
+      ignore_errors: yes
+      with_items:
+        - role1
+        - role2
 
     - name: Test including a task file
       include_role:
@@ -45,16 +48,23 @@
       vars:
         where_am_i_defined: in the task
 
-    - name: Pass templated variable to role
+    # FIXME Currently failing
+    # Not sure if this is suppsode to work
+    # - name: Pass all variables in a variable to role
+    #   include_role:
+    #     name: role1
+    #     tasks_from: vartest.yml
+    #   vars: "{{ role_vars }}"
+
+    - name: Pass templated variable to a role
       include_role:
         name: role1
         tasks_from: vartest.yml
-      vars: "{{ role_vars }}"
+      vars:
+        where_am_i_defined: in the playbook
 
-    - name: Set variable for next task
-      set_fact:
-        module_name: { include_role: {name: role1} }
-
-    - debug:
-        var: module_name
+    # This fails gloriously
+    # - name: Include an entire task
+    #   action:
+    #     module: "{{ entire_task }}"
 
