Build out more tests and test with linear and free strategy for each type

--- a/test/integration/targets/include_import/role/test_import_role.yml
+++ b/test/integration/targets/include_import/role/test_import_role.yml
@@ -1,48 +1,45 @@
 - name: Test import_role
-  hosts: localhost
-  connection: local
-  become: no
+  hosts: testhost
 
   vars:
     role_name: role1
     role_vars:
       where_am_i_defined: in the playbook
     entire_task:
-      include_role:
+      import_role:
         # name: role1
 
   tasks:
     - name: Test basic role include
-      include_role:
+      import_role:
         name: role1
 
-    # FIXME Currently failing
-    # - name: Test role include with a loop
-    #   include_role:
-    #     name: "{{ item }}"
-    #   ignore_errors: yes
-    #   with_items:
-    #     - role1
-    #     - role2
+    - name: Test role include with a loop
+      import_role:
+        name: "{{ item }}"
+      ignore_errors: yes
+      with_items:
+        - role1
+        - role2
 
     - name: Test including a task file
-      include_role:
+      import_role:
         name: role1
         tasks_from: tasks.yml
 
     - name: Test including vars file and tasks file from a role
-      include_role:
+      import_role:
         name: role3
         tasks_from: vartest.yml
         vars_from: role3vars.yml
         private: no
 
     - name: Use variable for role name
-      include_role:
+      import_role:
         name: "{{ role_name }}"
 
     - name: Pass variable to role
-      include_role:
+      import_role:
         name: role1
         tasks_from: vartest.yml
       vars:
@@ -51,13 +48,13 @@
     # FIXME Currently failing
     # Not sure if this is suppsode to work
     # - name: Pass all variables in a variable to role
-    #   include_role:
+    #   import_role:
     #     name: role1
     #     tasks_from: vartest.yml
     #   vars: "{{ role_vars }}"
 
     - name: Pass templated variable to a role
-      include_role:
+      import_role:
         name: role1
         tasks_from: vartest.yml
       vars:
