--- a/test/integration/targets/include_import/roles/role3/vars/role3vars.yml
+++ b/test/integration/targets/include_import/roles/role3/vars/role3vars.yml
@@ -1,2 +1,2 @@
-where_am_i_defined: role3
-role3var: defined in role3/vars/role3vars.yml
+where_am_i_defined: role3vars.yml
+role3_var: defined in role3/vars/role3vars.yml
