--- a/test/integration/targets/include_import/role/test_import_role.yml
+++ b/test/integration/targets/include_import/role/test_import_role.yml
@@ -2,41 +2,90 @@
   hosts: testhost
 
   vars:
+    run_role: yes
+    do_not_run_role: no
     role_name: role1
+    test_var: templating test in playbook
     role_vars:
       where_am_i_defined: in the playbook
     entire_task:
-      import_role:
-        # name: role1
+      include_role:
+        name: role1
 
   tasks:
-    - name: Test basic role include
+    - name: Test basic role import
       import_role:
         name: role1
 
-    - name: Test role include with a loop
-      import_role:
-        name: "{{ item }}"
-      ignore_errors: yes
-      with_items:
-        - role1
-        - role2
+    - name: Assert that basic include works
+      assert:
+        that:
+          - _role1_result.msg == 'In role1'
 
-    - name: Test including a task file
+    - name: Test conditional role include
+      import_role:
+        name: role1
+      when: run_role
+      register: _conditional_check
+
+    # - name: Assert that role ran
+    #   assert:
+    #     that:
+    #       - _conditional_check is not skipped
+
+    - name: Test conditional role import that should be skipped
+      import_role:
+        name: role1
+      when: do_not_run_role
+      register: _conditional_check
+
+    # - name: Assert that role ran
+    #   assert:
+    #     that:
+    #       - _conditional_check is skipped
+
+    # FIXME We expect this to fail, but I'm not sure how best to test for
+    # syntax level failures.
+    # - name: Test role import with a loop
+    #   import_role:
+    #     name: "{{ item }}"
+    #   register: loop_test
+    #   with_items:
+    #     - role1
+    #     - role3
+    #     - role2
+
+    - name: Test importing a task file from a role
       import_role:
         name: role1
         tasks_from: tasks.yml
 
-    - name: Test including vars file and tasks file from a role
+    - name: Test importing vars file and tasks file from a role
       import_role:
         name: role3
         tasks_from: vartest.yml
         vars_from: role3vars.yml
         private: no
 
-    - name: Use variable for role name
+    # FIXME Setting private: no in previous task does not make the variables
+    # available to the play
+    - name: Assert that variables defined in previous task are available to play
+      assert:
+        that:
+          - role3_default == 'defined in role3/defaults/main.yml'
+          - role3_main == 'defined in role3/vars/main.yml'
+          - role3_var == 'defined in role3/vars/role3vars.yml'
+      ignore_errors: yes
+
+    - name: Test using a play variable for role name
       import_role:
         name: "{{ role_name }}"
+
+    # FIXME Trying to use a host_var here causes nothing to run because the
+    # variable is undefined.
+    # - name: Test using a host variable for role name
+    #   import_role:
+    #     name: "{{ host_var_role_name }}"
 
     - name: Pass variable to role
       import_role:
@@ -45,8 +94,7 @@
       vars:
         where_am_i_defined: in the task
 
-    # FIXME Currently failing
-    # Not sure if this is suppsode to work
+    ## FIXME Currently failing
     # - name: Pass all variables in a variable to role
     #   import_role:
     #     name: role1
@@ -58,10 +106,27 @@
         name: role1
         tasks_from: vartest.yml
       vars:
-        where_am_i_defined: in the playbook
+        where_am_i_defined: "{{ test_var }}"
 
-    # This fails gloriously
+    ## FIXME This fails with the following error:
+    ## The module {u'import_role': {u'name': u'role1'}} was not found in configured module paths.
     # - name: Include an entire task
     #   action:
     #     module: "{{ entire_task }}"
 
+    - block:
+        - name: Include a role that will fail
+          import_role:
+            name: role1
+            tasks_from: fail.yml
+
+      rescue:
+        - name: Include a role inside rescue
+          import_role:
+            name: role2
+
+      always:
+        # Looks like this runs role1, role2, and role3. No idea why.
+        - name: Include role inside always
+          import_role:
+            name: role3
