--- a/test/integration/targets/include_import/tasks/test_include_tasks.yml
+++ b/test/integration/targets/include_import/tasks/test_include_tasks.yml
@@ -1,5 +1,6 @@
-- hosts: testhost
+- name: Test include_tasks
+  hosts: testhost
 
   tasks:
-    - debug:
-        msg: include_tasks test
+    - name: Test basic task include
+      include_tasks: tasks1.yml
