--- a/test/integration/targets/openssl_csr/tests/validate.yml
+++ b/test/integration/targets/openssl_csr/tests/validate.yml
@@ -20,3 +20,17 @@
   assert:
     that:
       - csr_ku_xku.changed == False
+
+- name: Validate old_API CSR (test - Common Name)
+  shell: "openssl req -noout -subject -in {{ output_dir }}/csr_olddapi.csr -nameopt oneline,-space_eq"
+  register: csr_olddapi_cn
+
+- name: Validate old_API CSR (test - csr modulus)
+  shell: 'openssl req -noout -modulus -in {{ output_dir }}/csr_olddapi.csr'
+  register: csr_olddapi_modulus
+
+- name: Validate old_API CSR (assert)
+  assert:
+    that:
+      - csr_olddapi_cn.stdout.split('=')[-1] == 'www.ansible.com'
+      - csr_olddapi_modulus.stdout == privatekey_modulus.stdout
